<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/name"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:text="@string/nameOfService"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/shapedetailsorders_texts"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textNameOrder"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:background="@drawable/shapedetailsorders_data"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="150dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:text="@string/dateOfService"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/shapedetailsorders_texts"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginTop="150dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/shapedetailsorders_data"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="225dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/shapedetailsorders_texts"
        android:gravity="center"
        android:text="@string/totalprice"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textTotalPrice"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="140dp"
        android:background="@drawable/shapedetailsorders_data"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

</RelativeLayout>